--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -57,7 +57,10 @@ a {
   color: #fff;
   text-align: center;
   background-color: #159957;
-  background-image: url("../images/surprised.with.phone.png");}
+  background-image: url("../images/surprised.with.phone.png");
+  height: 500px;
+}
+
 
 @media screen and (min-width: 64em) {
   .page-header {
